policies/kyverno/tests/resources/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    app.kubernetes.io/name: good-pod
    app.kubernetes.io/component: test
    app.kubernetes.io/part-of: private-ai-platform-kit
    platform.ai/cost-center: platform
    platform.ai/environment: test
    platform.ai/owner: platform-team
    platform.ai/sandbox-id: policy-test
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 10001
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: good
      image: ghcr.io/ramazankara/private-ai-platform-kit/good:0.1.0
      command: ["sleep", "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 10m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 128Mi
